# nlshape

./: CMakeLists.txt  LICENSE.rst  README.rst  requirements.txt  setup.py
cython/: nlfem.cpp  nlfem.pyx  setup.py
include/: Cassemble.h  Cassemble.pxd  MeshBuilder.h  MeshTypes.h  MeshTypes.pxd
nlshape/: bfgs.py  ex1_nonsym.py  ex1_sym.py  ex2_nonsym.py  ex2_sym.py  helper.py  main.py  mesh_data.py  nonlocal_shape_problem.py  plot_objective_functional.py  results_data.py
nlshape/mesh/: dummy_shape.geo  example_1.geo  example_1.h5  example_1.msh  example_1.xdmf  example_1_boundaries.h5  example_1_boundaries.xdmf  example_1_subdomains.h5  example_1_subdomains.xdmf  example_2.geo  example_2.h5  example_2.msh  example_2.xdmf  example_2_boundaries.h5  example_2_boundaries.xdmf  example_2_subdomains.h5  example_2_subdomains.xdmf  init_shape.geo  init_shape.h5  init_shape.msh  init_shape.xdmf  init_shape_boundaries.h5  init_shape_boundaries.xdmf  init_shape_subdomains.h5  init_shape_subdomains.xdmf  target_shape.geo  target_shape.h5  target_shape.msh  target_shape.xdmf  target_shape_boundaries.h5  target_shape_boundaries.xdmf  target_shape_subdomains.h5  target_shape_subdomains.xdmf
nlshape/results/results_paper/ex1_nonsym/: additional_results.txt  configuration.txt  interface.pvd  interface000000.vtu  interface000001.vtu  interface000002.vtu  interface000003.vtu  interface000004.vtu  interface000005.vtu  interface000006.vtu  interface000007.vtu  interface000008.vtu  interface000009.vtu  interface000010.vtu  interface000011.vtu  interface000012.vtu  interface000013.vtu  interface000014.vtu  interface000015.vtu  interface000016.vtu  interface000017.vtu  interface000018.vtu  interface000019.vtu  interface000020.vtu  interface000021.vtu  interface000022.vtu  subdomains000000.vtu  subdomains000001.vtu  subdomains000002.vtu  subdomains000003.vtu  subdomains000004.vtu  subdomains000005.vtu  subdomains000006.vtu  subdomains000007.vtu  subdomains000008.vtu  subdomains000009.vtu  subdomains000010.vtu  subdomains000011.vtu  subdomains000012.vtu  subdomains000013.vtu  (+51 more)
src/: .cd.swp  Cassemble.cpp  MeshBuilder.cpp  MeshTypes.cpp  checks.cpp  integration.cpp  integration.h  mathhelpers.cpp  mathhelpers.h  model.cpp  model.h
(+274 files in other folders)
